US49209: Member Sign In Page Updates [Patch work] Removed extra white space on mobile forms Fixed form stretch on lanscape mode

--- a/docroot/react/src/views/authentication/authentication.less
+++ b/docroot/react/src/views/authentication/authentication.less
@@ -30,7 +30,7 @@
         .row {
             .mobile-logo-container {
                 display: none;
-                margin-bottom: 8.125rem;
+                margin-bottom: 6.125rem;
                 .title{
                     width: fit-content;
                     margin: 0 2.812rem;
@@ -246,12 +246,18 @@
                 .mobile-logo-container {
                     display: block;
                 }
+                .login-form {
+                    .margin-gap {
+                        margin-top: 3.95rem;
+                    }
+                }
             }
         }
         .temp-content {
             .temp-form {
                 .mobile-logo-container {
                     display: block;
+                    margin-bottom: 0.5rem;
                 }
             }
         }
